2010-01-19  Alan McGovern  <amcgovern@novell.com>
	* BufferedStream.cs: Patch by Tom Philpot to optimise ReadByte and
	WriteByte significantly by making them fulfill their request by
	directly reading from the buffer.

2010-01-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* UnmanagedMemoryStream.cs: Read: don't read bytes one-by-one, read all
	at once.

2010-01-03  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* MemoryStream.cs: Don't clear the bytes beyond Length when shrinking
	it. Instead just save the related information for it and do it when
	Length grows and touchs that dirty region. Refactor the code where
	needed to avoid duplication as well.
	Fixes #327053.

2009-12-21  Sebastien Pouliot  <sebastien@ximian.com>

	* File.cs (ReadAllBytes): We cannot assume that a single call to
	Read will return all the data we require.

2009-11-24  Marek Safar <marek.safar@gmail.com>

	* StreamReader.cs, FileStream.cs: Use recycle buffer to avoid
	repeated underlying buffer initialization (saves hefty 10MB
	during corlib compilation).
	
	* Path.cs (InsecureGetFullPath): Avoid CanonicalizePath in common
	path.

2009-11-23  Miguel de Icaza  <miguel@novell.com>

	* DirectoryInfo.cs: Added the new overloads.

	* Directory.cs: Add EnumerateFiles and EnumerateFileSystemEntries
	overloads.    Share code.
	
	Add new GetFileSystemEntries overload

2009-11-22  Miguel de Icaza  <miguel@novell.com>

	* Directory.cs: Added new IEnumerable methods to Directory.

	* MonoIO.cs: Surface a high level FindFirst/FindNext API to
	implement the various enumerable APIs.

2009-11-13  Marek Safar <marek.safar@gmail.com>

	* UnmanagedMemoryAccessor.cs: Finished.

2009-11-13  Marek Safar <marek.safar@gmail.com>

	* UnmanagedMemoryAccessor.cs: Finished.

2009-11-08  Miguel de Icaza  <miguel@novell.com>

	* FileInfo.cs: Partially implement.

	* Stream.cs: Implement synchornized.

2009-11-07  Miguel de Icaza  <miguel@novell.com>

	* UnmanagedMemoryStream.cs: Move the CLS attribute to the methods